src/test/resources/typeSystemTestModels/invalid/annotations/AnnotationMethodReturnType.java
package resources.typeSystemTestModels.invalid.annotations;

import java.lang.*;

public class AnnotationMethodReturnType {

  @interface InvalidMethodReturnType {
    Integer getInteger();
  }

}
